--- a/docs/components/preview/textarea--color-variation.html
+++ b/docs/components/preview/textarea--color-variation.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link media="all" rel="stylesheet" href="../../atomic-package/atomic-package.css">
-    <title>Default | Preview Layout</title>
+    <title>Color Variation | Preview Layout</title>
     <style>
       #main { padding: 2em; }
     </style>
@@ -17,12 +17,27 @@
     <div class="content">
       <div class="row">
         <div class="grid grid-8 grid-center">
-
 <textarea name=""></textarea>
 
 <br><br>
 
-<textarea name="" class="resize"></textarea>
+<textarea name="" class="primary"></textarea>
+
+<br><br>
+
+<textarea name="" class="green"></textarea>
+
+<br><br>
+
+<textarea name="" class="blue"></textarea>
+
+<br><br>
+
+<textarea name="" class="orange"></textarea>
+
+<br><br>
+
+<textarea name="" class="red"></textarea>
 
         </div>
       </div>
