--- a/docs/components/preview/textarea--size-variation-height.html
+++ b/docs/components/preview/textarea--size-variation-height.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link media="all" rel="stylesheet" href="../../atomic-package/atomic-package.css">
-    <title>Default | Preview Layout</title>
+    <title>Size Variation Height | Preview Layout</title>
     <style>
       #main { padding: 2em; }
     </style>
@@ -17,12 +17,23 @@
     <div class="content">
       <div class="row">
         <div class="grid grid-8 grid-center">
+<textarea name="" class="lower"></textarea>
+
+<br><br>
+
+<textarea name="" class="low"></textarea>
+
+<br><br>
 
 <textarea name=""></textarea>
 
 <br><br>
 
-<textarea name="" class="resize"></textarea>
+<textarea name="" class="high"></textarea>
+
+<br><br>
+
+<textarea name="" class="lofty"></textarea>
 
         </div>
       </div>
