add form input email style

--- a/docs/components/preview/input--default.html
+++ b/docs/components/preview/input--default.html
@@ -26,6 +26,9 @@
 <p>search</p>
 <p><input type="search" value="input type search"><input type="search" value="input type search" disabled=""></p>
 
+<p>email</p>
+<p><input type="email" value="input type email"><input type="email" value="input type email" disabled=""></p>
+
         </div>
       </div>
     </div>
