--- a/src/components/form/input/input.hbs
+++ b/src/components/form/input/input.hbs
@@ -6,3 +6,6 @@
 
 <p>search</p>
 <p><input type="search" value="input type search"><input type="search" value="input type search" disabled=""></p>
+
+<p>email</p>
+<p><input type="email" value="input type email"><input type="email" value="input type email" disabled=""></p>
