--- a/docs/components/preview/footer.html
+++ b/docs/components/preview/footer.html
@@ -19,19 +19,13 @@
         <div class="grid grid-8 grid-center">
 <footer class="footer">
   <div class="top">
-    <div class="wrap">
-      top
-    </div>
+    <div class="wrap">Footer Layout Top</div>
   </div>
   <div class="main">
-    <div class="wrap">
-      main
-    </div>
+    <div class="wrap">Footer Layout Main</div>
   </div>
   <div class="bottom">
-    <div class="wrap">
-      bottom
-    </div>
+    <div class="wrap">Footer Layout Bottom</div>
   </div>
 </footer>
 
