--- a/docs/components/render/footer.html
+++ b/docs/components/render/footer.html
@@ -2,19 +2,13 @@
 
 <footer class="footer">
   <div class="top">
-    <div class="wrap">
-      top
-    </div>
+    <div class="wrap">Footer Layout Top</div>
   </div>
   <div class="main">
-    <div class="wrap">
-      main
-    </div>
+    <div class="wrap">Footer Layout Main</div>
   </div>
   <div class="bottom">
-    <div class="wrap">
-      bottom
-    </div>
+    <div class="wrap">Footer Layout Bottom</div>
   </div>
 </footer>
 
