feat: 🎸 docs build

--- a/docs/components/preview/table--border.html
+++ b/docs/components/preview/table--border.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link media="all" rel="stylesheet" href="../../atomic-package/atomic-package.css">
-    <title>Default | Preview Layout</title>
+    <title>Border | Preview Layout</title>
     <style>
       #main { padding: 2em; }
     </style>
@@ -17,7 +17,7 @@
     <div class="content">
       <div class="row">
         <div class="grid grid-8 grid-center">
-<table class="table">
+<table class="table bordered">
   <caption>Table caption</caption>
   <thead>
   <tr>
@@ -26,30 +26,30 @@
     <th>Table Heading</th>
   </tr>
   </thead>
+  <tfoot>
+  <tr>
+    <td>Table Footer</td>
+    <td>Table Footer</td>
+    <td>Table Footer</td>
+  </tr>
+  </tfoot>
   <tbody>
   <tr>
     <td>Table Data</td>
     <td>Table Data</td>
     <td>Table Data</td>
   </tr>
-  <tr class="center">
-    <td>Table Data (center)</td>
-    <td>Table Data (center)</td>
-    <td>Table Data (center)</td>
+  <tr>
+    <td>Table Data</td>
+    <td>Table Data</td>
+    <td>Table Data</td>
   </tr>
   <tr>
     <td>Table Data</td>
-    <td class="center">Table Data (center)</td>
-    <td class="right">Table Data (right)</td>
+    <td>Table Data</td>
+    <td>Table Data</td>
   </tr>
   </tbody>
-  <tfoot>
-    <tr>
-        <td>Table Footer</td>
-        <td>Table Footer</td>
-        <td>Table Footer</td>
-    </tr>
-  </tfoot>
 </table>
 
         </div>
