--- a/docs/components/preview/icon--font-awesome.html
+++ b/docs/components/preview/icon--font-awesome.html
@@ -744,6 +744,7 @@
     <li><p class="icon ap-wpbeginner"></p> wpbeginner</li>
     <li><p class="icon ap-wpforms"></p> wpforms</li>
     <li><p class="icon ap-yoast"></p> yoast</li>
+    <li><p class="far fa-box-open"></p> yoast</li>
 </ul>
 
 <style>
