--- a/docs/components/preview/icon--font-awesome.html
+++ b/docs/components/preview/icon--font-awesome.html
@@ -744,7 +744,12 @@
     <li><p class="icon ap-wpbeginner"></p> wpbeginner</li>
     <li><p class="icon ap-wpforms"></p> wpforms</li>
     <li><p class="icon ap-yoast"></p> yoast</li>
-    <li><p class="far fa-box-open"></p> yoast</li>
+    // 5.0 ~ (sample)
+    <li><p class="icon ap-book-open"></p> book-open</li>
+    <li><p class="icon ap-tshirt"></p> tshirt</li>
+    <li><p class="icon ap-file-download"></p> file-download</li>
+    <li><p class="icon ap-bell"></p> bell</li>
+    <li><p class="icon ap-question-circle"></p> question-circle</li>
 </ul>
 
 <style>
